; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_ri_triggers.c_ri_PlanCheck.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_ri_triggers.c_ri_PlanCheck.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }
%struct.TYPE_6__ = type { i32 }

@RI_PLAN_LAST_ON_PK = common dso_local global i64 0, align 8
@SECURITY_LOCAL_USERID_CHANGE = common dso_local global i32 0, align 4
@SECURITY_NOFORCE_RLS = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"SPI_prepare returned %s for %s\00", align 1
@SPI_result = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32, i32*, %struct.TYPE_5__*, i32, i32)* @ri_PlanCheck to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ri_PlanCheck(i8* %0, i32 %1, i32* %2, %struct.TYPE_5__* %3, i32 %4, i32 %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca %struct.TYPE_5__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i8* %0, i8** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store %struct.TYPE_5__* %3, %struct.TYPE_5__** %10, align 8
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @RI_PLAN_LAST_ON_PK, align 8
  %21 = icmp sle i64 %19, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %6
  %23 = load i32, i32* %12, align 4
  store i32 %23, i32* %14, align 4
  br label %26

24:                                               ; preds = %6
  %25 = load i32, i32* %11, align 4
  store i32 %25, i32* %14, align 4
  br label %26

26:                                               ; preds = %24, %22
  %27 = call i32 @GetUserIdAndSecContext(i32* %15, i32* %16)
  %28 = load i32, i32* %14, align 4
  %29 = call %struct.TYPE_6__* @RelationGetForm(i32 %28)
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* %16, align 4
  %33 = load i32, i32* @SECURITY_LOCAL_USERID_CHANGE, align 4
  %34 = or i32 %32, %33
  %35 = load i32, i32* @SECURITY_NOFORCE_RLS, align 4
  %36 = or i32 %34, %35
  %37 = call i32 @SetUserIdAndSecContext(i32 %31, i32 %36)
  %38 = load i8*, i8** %7, align 8
  %39 = load i32, i32* %8, align 4
  %40 = load i32*, i32** %9, align 8
  %41 = call i32* @SPI_prepare(i8* %38, i32 %39, i32* %40)
  store i32* %41, i32** %13, align 8
  %42 = load i32*, i32** %13, align 8
  %43 = icmp eq i32* %42, null
  br i1 %43, label %44, label %50

44:                                               ; preds = %26
  %45 = load i32, i32* @ERROR, align 4
  %46 = load i32, i32* @SPI_result, align 4
  %47 = call i32 @SPI_result_code_string(i32 %46)
  %48 = load i8*, i8** %7, align 8
  %49 = call i32 @elog(i32 %45, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %47, i8* %48)
  br label %50

50:                                               ; preds = %44, %26
  %51 = load i32, i32* %15, align 4
  %52 = load i32, i32* %16, align 4
  %53 = call i32 @SetUserIdAndSecContext(i32 %51, i32 %52)
  %54 = load i32*, i32** %13, align 8
  %55 = call i32 @SPI_keepplan(i32* %54)
  %56 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %57 = load i32*, i32** %13, align 8
  %58 = call i32 @ri_HashPreparedPlan(%struct.TYPE_5__* %56, i32* %57)
  %59 = load i32*, i32** %13, align 8
  ret i32* %59
}

declare dso_local i32 @GetUserIdAndSecContext(i32*, i32*) #1

declare dso_local i32 @SetUserIdAndSecContext(i32, i32) #1

declare dso_local %struct.TYPE_6__* @RelationGetForm(i32) #1

declare dso_local i32* @SPI_prepare(i8*, i32, i32*) #1

declare dso_local i32 @elog(i32, i8*, i32, i8*) #1

declare dso_local i32 @SPI_result_code_string(i32) #1

declare dso_local i32 @SPI_keepplan(i32*) #1

declare dso_local i32 @ri_HashPreparedPlan(%struct.TYPE_5__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
